--- a/boostlook.css
+++ b/boostlook.css
@@ -1428,7 +1428,7 @@ html.dark .boostlook .doc .literalblock pre {
   margin-left: 0;
 }
 .boostlook .listingblock:has(> .content > pre):not(:is(dd pre, td pre)), .boostlook .listingblock:has(> .content > pre.highlight):not(:is(dd pre, td pre)) {
-  margin-left: var(--spacing-size-xl);
+  /*margin-left: var(--spacing-size-xl);*/
 }
 
 .boostlook .listingblock:has(> .content > pre):not(:is(dd pre, td pre)):has(.title) {
@@ -1450,6 +1450,10 @@ html.dark .boostlook .doc .literalblock pre {
   flex-direction: column-reverse;
 }
 
+.boostlook#libraryReadMe > pre:not(:is(dd pre, td pre)) {
+  padding: var(--spacing-size-xs, 0.75rem) var(--spacing-size-sm, 1rem);
+}
+.boostlook#libraryReadMe > pre:not(:is(dd pre, td pre)),
 .boostlook .highlight pre,
 .boostlook .content:has(> pre) pre.highlight {
   border: 1px solid var(--border-border-secondary, #d5d7d9);
