--- a/boostlook.css
+++ b/boostlook.css
@@ -1313,7 +1313,6 @@ div.source-docs-antora.boostlook:not(:has(.doc)):not(:has(>.boostlook)) > #conte
   padding: var(--spacing-size-xs, 0.75rem) var(--spacing-size-sm, 1rem);
   background: var(--atom-one-light-bg, #fafafa);
   border-radius: 0;
-  border: unset;
 }
 
 /* Dark theme code block background */
@@ -1423,12 +1422,17 @@ html.dark .boostlook .doc .literalblock pre {
   background: var(--atom-one-light-bg, #fafafa);
   margin-top: var(--padding-padding-xs, 0.75rem);
 }
+
+.boostlook#libraryReadMe .literalblock:has(pre):not(:is(dd pre, td pre)) {
+  margin-left: var(--spacing-size-xl);
+  border: 1px solid var(--border-border-secondary, #d5d7d9);
+}
 .boostlook .olist.arabic > ol > li .listingblock:has(> .content > pre):not(:is(dd pre, td pre)),
 .boostlook:not(:has(.doc)) .orderedlist > ol > li .listingblock:has(> .content > pre.highlight):not(:is(dd pre, td pre)) {
   margin-left: 0;
 }
 .boostlook .listingblock:has(> .content > pre):not(:is(dd pre, td pre)), .boostlook .listingblock:has(> .content > pre.highlight):not(:is(dd pre, td pre)) {
-  /*margin-left: var(--spacing-size-xl);*/
+  margin-left: var(--spacing-size-xl);
 }
 
 .boostlook .listingblock:has(> .content > pre):not(:is(dd pre, td pre)):has(.title) {
@@ -2015,8 +2019,19 @@ html.dark .boostlook .hljs-code {
   border-radius: var(--spacing-size-size-0, 0rem);
   border: 1px solid transparent;
   margin: revert;
-  /*margin-left: var(--spacing-size-xl);*/
+  margin-left: var(--spacing-size-xl);
   background: transparent;
+}
+
+.boostlook #content li .admonitionblock,
+.boostlook:not(:has(.doc)) li div.note,
+.boostlook:not(:has(.doc)) li div.tip,
+.boostlook:not(:has(.doc)) li div.important,
+.boostlook:not(:has(.doc)) li div.caution,
+.boostlook:not(:has(.doc)) li div.warning,
+.boostlook:not(:has(.doc)) li div.blurb,
+.boostlook:not(:has(.doc)) li p.blurb {
+  margin-left: 0;
 }
 
 /* Readme Template Admonitionblock */
@@ -2239,6 +2254,7 @@ html.dark .boostlook .hljs-code {
   background-color: var(--surface-background-main-surface-blue-primary, #ebf4f9);
   border: 1px solid var(--border-border-blue-primary, #c2e2f4);
   padding: var(--padding-padding-xs, 0.75rem) var(--padding-padding-md, 1.125rem);
+  margin-left: var(--spacing-size-xl);
 }
 .boostlook #content .dlist:not(:first-child):not(.dlist .dlist):has(.hdlist1) .hdlist1 {
   font-size: var(--typography-font-size-sm, 1rem);
@@ -2255,7 +2271,7 @@ html.dark .boostlook .hljs-code {
 }
 .boostlook #content .olist.arabic > ol > li table.tableblock:not(:first-child),
 .boostlook #content  .olist.arabic > ol > li .dlist:not(:first-child):not(.dlist .dlist) {
-  /*margin-left: var(--spacing-size-xl);*/
+  margin-left: 0;
 }
 .boostlook #content .dlist:not(:first-child):not(.dlist .dlist):has(.hdlist1) dd  a {
   color: var(--text-main-text-link-blue, #026a9f);
@@ -2716,6 +2732,7 @@ div.source-docs-antora.boostlook:not(:has(.doc)):not(:has(>.boostlook)) > #conte
 .boostlook:not(:has(.doc)) table.table,
 .boostlook#libraryReadMe > table.stretch {
   min-width: 100%;
+  margin-left: var(--spacing-size-xl, 2rem);
 }
 
 .boostlook #content table.tableblock caption,
