--- a/boostlook.css
+++ b/boostlook.css
@@ -2256,6 +2256,11 @@ html.dark .boostlook .hljs-code {
   padding: var(--padding-padding-xs, 0.75rem) var(--padding-padding-md, 1.125rem);
   margin-left: var(--spacing-size-xl);
 }
+
+.boostlook #content .colist.arabic > table > tbody > tr td .dlist:not(:first-child):not(.dlist .dlist):has(.hdlist1) {
+  margin-left: 0;
+}
+
 .boostlook #content .dlist:not(:first-child):not(.dlist .dlist):has(.hdlist1) .hdlist1 {
   font-size: var(--typography-font-size-sm, 1rem);
   font-variation-settings: "wght" 600, "wdth" 62.5;
@@ -2675,6 +2680,11 @@ div.source-docs-antora.boostlook:not(:has(.doc)):not(:has(>.boostlook)) > #conte
   white-space: nowrap;
 }
 
+.boostlook .colist.arabic > table > tbody > tr > :first-child:has(.conum),
+.boostlook .colist.arabic > table > tr > :first-child:has(.conum) {
+  padding-top: 0;
+}
+
 /* Tables */
 /* Reset Antora Table Styles */
 .boostlook #content table.tableblock tr,
@@ -2922,6 +2932,11 @@ div.source-docs-antora.boostlook:not(:has(.doc)):not(:has(>.boostlook)) > #conte
   background: var(--surface-background-main-surface-primary, #f5f6f8);
   width: 100%;
   margin-top: var(--padding-padding-xs, 0.75rem);
+}
+
+.boostlook:not(#libraryReadMe) .image:has(> img),
+.boostlook .content:has(> img) {
+  background-color: transparent;
 }
 
 .boostlook:not(:has(.doc)) .inlinemediaobject:has(> img, > object) {
