--- a/boostlook.css
+++ b/boostlook.css
@@ -1283,6 +1283,19 @@ div.source-docs-antora.boostlook:not(:has(.doc)):not(:has(>.boostlook)) > #conte
   font-style: italic;
 }
 
+/* Comments within code (inline and blocks) */
+.boostlook code span.c,
+.boostlook code span.ch,
+.boostlook code span.cm,
+.boostlook code span.cp,
+.boostlook code span.cpf,
+.boostlook code span.c1,
+.boostlook code span.cs,
+.boostlook code span.comment {
+  font-family: "Monaspace Radon", monospace;
+  font-style: italic;
+}
+
 .boostlook em {
   font-family: inherit;
   font-size: inherit;
@@ -1784,6 +1797,7 @@ html.dark .boostlook#libraryReadMe div.highlight:has(> pre):not(:is(dd pre, td p
 .boostlook .hljs-bullet,
 .boostlook .hljs-code {
   color: var(--atom-one-light-comment, #a0a1a7);
+  font-family: "Monaspace Radon", monospace;
   font-style: italic;
 }
 
@@ -1805,6 +1819,8 @@ html.dark .boostlook .hljs-built_in,
 html.dark .boostlook .hljs-bullet,
 html.dark .boostlook .hljs-code {
   color: var(--atom-one-dark-comment, #5c6370);
+  font-family: "Monaspace Radon", monospace;
+  font-style: italic;
 }
 
 .boostlook pre span.s,
@@ -3505,6 +3521,7 @@ html.is-clipped--nav:has(.boostlook) div#content {
 .boostlook pre.rouge .c1,
 .boostlook pre.rouge .cm { /* Comments */
   color: var(--atom-one-light-comment, #a0a1a7);
+  font-family: "Monaspace Radon", monospace;
   font-style: italic;
 }
 
@@ -3536,6 +3553,7 @@ html.dark .boostlook pre.rouge .c,
 html.dark .boostlook pre.rouge .c1,
 html.dark .boostlook pre.rouge .cm {
   color: var(--atom-one-dark-comment, #5c6370);
+  font-family: "Monaspace Radon", monospace;
   font-style: italic;
 }
 
